# docs_finder_api

./: .env_template  .isort.cfg  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  launch_data.py  pyproject.toml  run_data.py  setup.cfg
.github/workflows/: linters.yml
app/: config.py  data_launch.py  main.py  schemas.py
app/api/: base.py
app/api/api_v1/: routers.py
data_files/: posts.csv
tests/: test_routers.py
